--- a/templates/index.html
+++ b/templates/index.html
@@ -15,13 +15,14 @@
 <body>
     <h1>Password Generator</h1>
     
-    <form action="/generate_password" method="post">
+    <form action="{{ url_for('generate_and_store_password') }}" method="post">
         <label for="passwordName">Password Name:</label>
         <input type="text" id="passwordName" name="passwordName" required>
         <br>
         <button type="submit">Generate Password</button>
     </form>
 
-    <p>{{ generated_password }}</p>
+    <p id="generatedPassword">{{ generated_password }}</p>
+    <p id="storeMessage">{{ store_message }}</p>
 </body>
 </html>
